[metadata]
name = Morton3D
version = 1.0
description = z-order curve (a.k.a. Morton order) implementation in Python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/Jianningli/Morton3D
author = Jianning Li
author_email = jianningli.me@gmail.com

[options]
packages=Morton3D
